# agrigpspi

./: CMakeLists.txt  README.md  agrigpspi.py  gps.ubx  gps_20170901_1126.ubx  gps_20200608_1147.ubx  gps_20200608_1150.ubx  gps_fablab.ubx  gps_parking.ubx  gps_travail_3m.ubx  gps_warmo.ubx  setup.sh  vim
arduino/: .gitignore  platformio.ini
arduino/bineuse/: bineuse.ino
arduino/pilot_volant/: pilot_volant.ino
install/: agri_gps_pi.desktop
src/: curveAB.cpp  curveAB.hpp  ekf_module.cpp  ekf_module.hpp  environnement.hpp  environnement.hpp.in  gps_framework.cpp  gps_framework.hpp  gps_module.cpp  gps_module.hpp  imu_module.cpp  imu_module.hpp  lineAB.cpp  lineAB.hpp  logging.hpp  main.cpp  parcelle.cpp  parcelle.hpp  pilot_module.cpp  pilot_module.hpp  serial.hpp  tracteur.hpp
src/boost/: my_boost_serial_port.cpp  my_boost_serial_port.hpp  serial_port.cpp  serial_port.hpp
src/config/: config.cpp  config.hpp
src/gui/: base_widget.cpp  base_widget.hpp  gps_widget.cpp  gps_widget.hpp  guidage_widget.cpp  guidage_widget.hpp  include_qt.hpp  infos_widget.cpp  infos_widget.hpp  keyboard_widget.cpp  keyboard_widget.hpp  machine_widget.cpp  machine_widget.hpp  main_window.cpp  main_window.hpp  menu_widget.cpp  menu_widget.hpp  option_widget.cpp  option_widget.hpp  options_widget.cpp  options_widget.hpp  parcelle_widget.cpp  parcelle_widget.hpp  sat_widget.cpp  sat_widget.hpp
src/gui/line/: line_load_widget.cpp  line_load_widget.hpp  line_new_widget.cpp  line_new_widget.hpp  (+2 more)
src/util/: parser.hpp  stat.cpp  stat.hpp  util.cpp  util.hpp
tools/: test.py
(+13 files in other folders)
